kubernetes/bambuddy/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: bambuddy
  namespace: bambuddy

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bambuddy
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
